(fix): gap

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,7 @@
   top: 100px;
 
   @include desktop {
-    gap: 250px;
+    gap: 150px;
   }
 
   @include desktopBig {
