--- a/src/component/projectCards/projectCards.scss
+++ b/src/component/projectCards/projectCards.scss
@@ -47,6 +47,11 @@
 
       cursor: pointer;
 
+      &:hover {
+        width: 260px;
+        height: 510px;
+      }
+
       &__inner {
         position: relative;
         width: 100%;
